# chat_messages

./: .gitignore  Cargo.toml  README.md
derive_base_message/: Cargo.toml
derive_base_message/src/: derive_macro.rs  field.rs  fields.rs  lib.rs  methods.rs
src/: ai_message.rs  base_message.rs  chat_message.rs  define_message.rs  human_message.rs  lib.rs  message_enum.rs  message_type.rs  prelude.rs  system_message.rs  tool_message.rs
tests/: define_message_tests.rs  derive_message_tests.rs  message_serialization_tests.rs  message_tests.rs
