[package]
name = "chat_messages"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/kinghuynh/chat_messages.git"
authors = ["Kingston Huynh <139024820+kinghuynh@users.noreply.github.com>"]

[dependencies]
paste = "1.0.15"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
derive_base_message = { path = "derive_base_message" }

[workspace]
members = [
    "derive_base_message"
]