[package]
name = "messageforge"
version = "0.1.5"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/kinghuynh/messageforge.git"
authors = ["Kingston Huynh <139024820+kinghuynh@users.noreply.github.com>"]
description = "messageforge is a lightweight Rust library for creating structured messages in chat systems, including HumanMessage, AiMessage, SystemMessage, and more. It supports easy extensibility through macros, Serde-based serialization, and customizable fields, making it ideal for chatbots, AI agents, and messaging platforms."
keywords = ["llm", "AI", "langchain", "chatbots", "agents"]
categories = ["text-processing", "parsing", "development-tools::procedural-macro-helpers", "development-tools"]

[dependencies]
paste = "1.0.15"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
derive_base_message = { version = "0.1.0", path = "derive_base_message" }

[workspace]
members = [
    "derive_base_message"
]
