[package]
name = "derive_base_message"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "A procedural macro for generating base message structures."
keywords = ["proc-macro", "derive", "rust", "llm", "langchain"]
categories = ["development-tools", "development-tools::procedural-macro-helpers"]
authors = ["Kingston Huynh <139024820+kinghuynh@users.noreply.github.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.77", features = ["full"] }